<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">菠萝HR</string>
    <string name="action_settings">Settings</string>
    <string name="button_cancel">取消</string>
    <string name="button_setting_network">设置网络</string>
    <string name="network_unreachable_title">网络不可用</string>
    <string name="network_setting_msg">好像网络出了点问题，快去检查一下吧</string>
    <string name="tip_fast_click">少年,慢点戳</string>
    <string name="tip_open_gps">打开gps，快速寻找周围的小伙伴</string>
    <string name="tip_open_gps_title">打开定位</string>
    <string name="button_open_gps">打开gps</string>

    <!-- setting -->
    <string name="setting_feedback_welcome">您好，我是产品经理，欢迎您给我们提产品的使用感受和建议</string>
    
        <!-- 网络请求公用 -->
    <string name="network_failure">网络繁忙，请稍后再试。</string>
    <string name="net_error">网络异常</string>
    <string name="net_not_open">网络不给力哦！</string>
    <string name="net_unknown_error">网络繁忙，请稍后再试。</string><!-- 未知错误 -->
    <string name="please_wait">请稍等</string>
    <string name="code_out">验证码失效</string>
    <string name="code_error">验证码错误</string>
    <string name="servers_error">网络繁忙，请稍后再试（100）。</string><!-- 服务器异常 -->
    <string name="param_missing">网络繁忙，请稍后再试（101）。</string><!-- 缺失必选参数 -->
    <string name="param_illegal">网络繁忙，请稍后再试（102）。</string><!-- 参数值非法 -->
    <string name="database_error">数据库错误</string>
    <string name="program_error">网络繁忙，请稍后再试。</string><!-- 程序异常 -->
    
    <!-- 弹窗提示的文字 -->
    <string name="format_check_result_error_title">格式验证错误</string>
    <string name="is_null_check_result_title">填写提示</string>
    <string name="http_request_error_title">发送请求提示信息</string>
    <string name="login_fail_title">登录提示</string>
    <string name="http_request_fail_error">连接服务器失败, 请您联系客服或稍后重试</string>
    <string name="unchecked_error_title">选择提示</string>
    
     <string name="time_next">Next</string>
    <string name="time_prev">Previous</string>
    
    <string name="login_no_code_tip">请检查手机号是否正确，如无误超过60秒仍未收到短信，可能是短信被拦截或网络异常，请拨打客服电话获取验证码。</string>
    
    <!-- 图片浏览 -->
    <string name="only_choose_num">最多可同时上传12张</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string> 
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    
    <string name="add_tag">Add Tag</string>
     <!--二维码扫描  -->
	<string name="scan_text">将二维码放入框内, 即可自动扫描</string>
	
	<!--应用中心-->
	<!-- 事务提醒、通知公告、会议安排、面试邀约、差旅规划文字统一 -->
	<string name="affair_card">交给秘书处理</string>
	<!--快递、送水、保洁、废品回收、团建拓展 位子统一-->
	<string name="function_card">智能贴心服务</string>
	
	<!-- 首页小标题 -->
	<string name="m_new_fra_item1">视听课程</string>
	<string name="m_new_fra_item2">精品课程</string>
	<string name="m_new_fra_item3">知识学院</string>
	<string name="m_new_fra_item4">签到有礼</string>
	<string name="m_new_fra_item5">互助问答</string>
	<string name="m_new_fra_item6">简历交换</string>
	<string name="m_new_fra_item7">找服务商</string>
	<string name="m_new_fra_item8">福利商城</string>
	<string name="m_new_fra_item9">常用工具</string>
	
	<!-- 我的页面小标题 -->
	<string name="m_ps_fra_item1">动态</string>
	<string name="m_ps_fra_item2">话题</string>
	<string name="m_ps_fra_item3">关注</string>
	<string name="m_ps_fra_item4">粉丝</string>
	<string name="m_ps_fra_item5">我的订单</string>
	<string name="m_ps_fra_item6">优惠券</string>
	<string name="m_ps_fra_item7">积分商城</string>
	<string name="m_ps_fra_item8">企业服务</string>
	
	<string name="m_ps_fra_sub1">我的消息</string>
	<string name="m_ps_fra_sub2">我的钱包</string>

	
	<!--问答互助我要提问-->
		<string name="m_question_hint">别着急，试着将问题尽可能清晰、详尽的描述，
		    这样回答者们才能完善，更高质量的的为你解答</string>
	
	
	<!--创建企业通讯录-->
    <string name="company_register_name">名称</string>
    <string name="company_register_short_name">简称</string>
    <string name="company_register_location">地区</string>
    <string name="company_register_scale">规模</string>
    <string name="company_register_hint1">请输入企业/团队名称</string>
    <string name="company_register_hint2">请输入企业/团队简称</string>

    <!--邀请成员加入-->
    <string name="invite_friend_btn">1.点击按钮分享邀请链接，成员填写后即可加入</string>
    <string name="invite_friend_qr">2.请同事在App中扫描下方二维码，立即加入</string>


</resources>