<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg_color"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/view_title_bar"
            layout="@layout/layout_title_bar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/simi_color_line_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/simi_color_white"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/company_register_name"
                    android:textColor="@color/index_first_title_color"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/m_et_company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:hint="@string/company_register_hint1"
                    android:gravity="right"
                    android:textSize="18sp"
                    android:singleLine="true" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/m_et_company_name"
                android:background="@color/index_third_title_color" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/company_register_short_name"
                    android:textColor="@color/index_first_title_color"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/m_et_company_short_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@null"
                    android:gravity="right"
                    android:textSize="18sp"
                    android:hint="@string/company_register_hint2"
                    android:singleLine="true"
                    />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/m_et_company_short_name"
                android:background="@color/index_third_title_color" />

            <RelativeLayout
                android:id="@+id/m_rl_item1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_register_location"
                    android:textColor="@color/index_first_title_color"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/m_et_company_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="18sp"
                    />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/m_et_company_location"
                android:background="@color/index_third_title_color" />

            <RelativeLayout
                android:id="@+id/m_rl_item2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_register_scale"
                    android:textColor="@color/index_first_title_color"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/m_et_company_scale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:singleLine="true"
                    android:textSize="18sp"
                    />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/m_et_company_scale"
                android:background="@color/index_third_title_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="3dp"
                    android:text="1.创建企业后，积分和经验值加倍，还可以邀请同事加入"
                    android:textColor="@color/index_first_title_color"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:padding="3dp"
                    android:text="2.批量导入通讯录，可在PC端浏览器登录x.bolohr.com,体验更多人事行政服务。"
                    android:textColor="@color/index_first_title_color"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_register_company"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:background="@color/simi_color_blue"
                android:gravity="center"
                android:text="创建公司"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/view_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#a2000000"
        android:visibility="gone" />
</FrameLayout>