<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
    android:id="@+id/m_banner_homes"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include
            android:id="@+id/m_banner"
            layout="@layout/banner" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/m_banner"
            >
        <LinearLayout
            android:id="@+id/m_item1"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/m_home1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp" >

                <com.meijialife.simi.ui.RoundImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/index_tonghangreliao"
                    imagecontrol:border_inside_color="@color/simi_color_white"
                    imagecontrol:border_outside_color="@color/simi_color_white"
                    imagecontrol:border_thickness_in="1dp"
                    imagecontrol:border_thickness_out="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/m_new_fra_item1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/m_home2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp" >

                <com.meijialife.simi.ui.RoundImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/index_jingpinkecheng"
                    imagecontrol:border_inside_color="@color/simi_color_white"
                    imagecontrol:border_outside_color="@color/simi_color_white"
                    imagecontrol:border_thickness_in="1dp"
                    imagecontrol:border_thickness_out="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/m_new_fra_item2" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/m_home3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp" >

                <com.meijialife.simi.ui.RoundImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/index_zhishixueyuan"
                    imagecontrol:border_inside_color="@color/simi_color_white"
                    imagecontrol:border_outside_color="@color/simi_color_white"
                    imagecontrol:border_thickness_in="1dp"
                    imagecontrol:border_thickness_out="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/m_new_fra_item3" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/m_home4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp" >

                <com.meijialife.simi.ui.RoundImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/index_qiandaoyouli"
                    imagecontrol:border_inside_color="@color/simi_color_white"
                    imagecontrol:border_outside_color="@color/simi_color_white"
                    imagecontrol:border_thickness_in="1dp"
                    imagecontrol:border_thickness_out="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/m_new_fra_item4" />
            </LinearLayout>
        </LinearLayout>
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:orientation="horizontal"
             >

            <LinearLayout
                android:id="@+id/m_homes1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp" >

                <com.meijialife.simi.ui.RoundImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/index_shangjinlieren"
                    imagecontrol:border_inside_color="@color/simi_color_white"
                    imagecontrol:border_outside_color="@color/simi_color_white"
                    imagecontrol:border_thickness_in="1dp"
                    imagecontrol:border_thickness_out="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/m_new_fra_item5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/m_homes2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp" >

                <com.meijialife.simi.ui.RoundImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/index_jianlijiaohuan"
                    imagecontrol:border_inside_color="@color/simi_color_white"
                    imagecontrol:border_outside_color="@color/simi_color_white"
                    imagecontrol:border_thickness_in="1dp"
                    imagecontrol:border_thickness_out="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/m_new_fra_item6" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/m_homes3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp" >

                <com.meijialife.simi.ui.RoundImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/index_fuwudating"
                    imagecontrol:border_inside_color="@color/simi_color_white"
                    imagecontrol:border_outside_color="@color/simi_color_white"
                    imagecontrol:border_thickness_in="1dp"
                    imagecontrol:border_thickness_out="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/m_new_fra_item7" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/m_homes4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="8dp" >

                <com.meijialife.simi.ui.RoundImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/index_fulishangcheng"
                    imagecontrol:border_inside_color="@color/simi_color_white"
                    imagecontrol:border_outside_color="@color/simi_color_white"
                    imagecontrol:border_thickness_in="1dp"
                    imagecontrol:border_thickness_out="1dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/m_new_fra_item8" />
            </LinearLayout>
        </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
  <RelativeLayout
        android:id="@+id/m_rl_category"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#f4f4f4"
        android:visibility="visible" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:padding="5dp"
            android:text="每日新知"
            android:textColor="#4d4d4d" />
    </RelativeLayout>
    
</LinearLayout>